--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -84,10 +84,10 @@ print(f"Using test '{test.name}' with {len(test_cases)} test cases.")
 
 ## 5. Use a Default Metric
 
-To evaluate the "Jailbreak" test, we'll use the "Jailbreak Resilience v2" [metric](concepts/metric/jailbreak-resilience-v2).
+To evaluate the "Jailbreak" test, we'll use the "Jailbreak Resilience" [metric](concepts/metric/jailbreak-resilience).
 
 ```python
-metric = galtea.metrics.get_by_name(name="Jailbreak Resilience v2")
+metric = galtea.metrics.get_by_name(name="Jailbreak Resilience")
 ```
 
 ## 6. Run Evaluations
